change on swagger file to fit the lastest change in API
